<resources>
    <string name="app_name">WaitersHelperClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--<string name="host">192.168.1.3</string>-->
    <string name="host">10.0.2.2</string>
    <string name="port">8080</string>
    <string name="please_login">Login to continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_products">Products</string>
    <string name="create_product">Create product</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="mesurement">Mesurement</string>
    <string name="product_name">Product Name</string>
    <string name="product_mesurement">Product Mesurement</string>
    <string name="dishes_activity_label">Dishes</string>
    <string name="who_coock">Who coocks</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="add_dish">Add Dish</string>
    <string name="is_dish_available">Available</string>
    <string name="change_dish">Change dish</string>
    <string name="submit">Submit</string>
    <string name="what_to_do">Select what to do!</string>
    <string name="all_fields_filled">All fields must be filled</string>
    <string name="wrong_price">Wrong price!!</string>
    <string name="product">Product</string>
    <string name="amount">Amount</string>
    <string name="add_new">Add new</string>
    <string name="change">Change</string>
    <string name="order_num">Order#</string>
    <string name="dish_name">Dish</string>
    <string name="portions">Portions</string>
    <string name="sum_price">Price Sum</string>
    <string name="time_added">Time added</string>
    <string name="time_ready">Time ready</string>
    <string name="time_clients_come">Time clients come</string>
    <string name="state">State</string>
    <string name="who_taken">Who Taken</string>
    <string name="who_serves">Who Serves</string>
    <string name="change_ordering">Change Ordering</string>
    <string name="serve">Serve</string>
    <string name="drop">Drop</string>
    <string name="avance">Avance</string>
    <string name="find">Find</string>
    <string name="print">Print</string>
    <string name="changeName">Change name</string>
    <string name="changePass">Change pass</string>
    <string name="addUser">Add User</string>
    <string name="userName">User name</string>
    <string name="userLogin">User login</string>
    <string name="userPassword">User Pass</string>
    <string name="isLocked">Locked</string>
    <string name="userType">Type</string>
    <string name="priceForPortion">$for1</string>
    <string name="priceForAll">$forAll</string>
    <string name="generate">Generate</string>

</resources>
