<LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:id="@+id/sNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/id"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b119ff15"/>

    <TextView
            android:id="@+id/product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/name"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b119ff15"/>

    <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/mesurement"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b119ff15"/>
</LinearLayout>