<LinearLayout
        android:id="@+id/productRowInReportLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
            android:id="@+id/productNameInRowReports"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/name"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b132ff22"/>

    <TextView
            android:id="@+id/productAmountInReportsRow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/amount"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b132ff22"/>

    <TextView
            android:id="@+id/productMesurementInReportsRow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ellipsize="end"
            android:padding="5dp"
            android:text="@string/mesurement"
            android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
            android:gravity="center" android:background="#b132ff22"/>

</LinearLayout>