<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="brytskyi.waitershelperclient.app.activities.dishes.AddProductFragment">


    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/productNameEdit" android:layout_gravity="center_horizontal|top"
            android:layout_above="@+id/textView2" android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_name"
            android:id="@+id/textView"
            android:layout_above="@+id/productNameEdit" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_mesurement"
            android:id="@+id/textView2"
            android:layout_above="@+id/mesurementSpinner" android:layout_centerHorizontal="true"/>
    <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/mesurementSpinner"
            android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_product"
            android:id="@+id/createProductButton"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/mesurementSpinner" android:layout_centerHorizontal="true"/>
</RelativeLayout>
