<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="brytskyi.waitershelperclient.app.activities.reports.DishesListInReportsFragment"
                android:background="@drawable/fon">

    <LinearLayout
            android:id="@+id/headerDishesListInReports"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android" android:background="#b1ff150e">

        <TextView
                android:id="@+id/dishNameInReportRow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ellipsize="end"
                android:padding="5dp"
                android:text="@string/name"
                android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
                android:gravity="center"/>

        <TextView
                android:id="@+id/dishTypeInReportRow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ellipsize="end"
                android:padding="5dp"
                android:text="@string/type"
                android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
                android:gravity="center"/>

        <TextView
                android:id="@+id/dishPortionInReportRow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:ellipsize="end"
                android:padding="5dp"
                android:text="@string/portions"
                android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
                android:gravity="center"/>

        <TextView
                android:id="@+id/priceForPortionInReportRow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:ellipsize="end"
                android:padding="5dp"
                android:text="@string/priceForPortion"
                android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
                android:gravity="center"/>

        <TextView
                android:id="@+id/dishPriceInReportRow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ellipsize="end"
                android:padding="5dp"
                android:text="@string/priceForAll"
                android:singleLine="true" android:textStyle="bold" android:layout_gravity="center"
                android:gravity="center"/>

    </LinearLayout>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dishesListInReports"
            android:layout_below="@+id/headerDishesListInReports" android:layout_alignParentStart="true"
            android:layout_above="@+id/priceSum" android:background="#b1fdff1d"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceSum"
            android:text="Sum:"
            android:gravity="center" android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/priceSumInReportsDishesList" android:textSize="15dp"
            android:textStyle="bold" android:background="#b11212ff" android:textColor="#faff0a"/>

    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/priceSumInReportsDishesList"
            android:text="0"
            android:gravity="center"
            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" android:textSize="15dp"
            android:textStyle="bold" android:background="#b11212ff" android:textColor="#faff0a"/>


</RelativeLayout>

